web/src/css/rd.css
/* R & D*/

.r-d-menu{
  font-family: Arial, Helvetica, sans-serif;
  padding: 1.75rem 0;
}
.rnd-contact {
  font-family: Arial, Helvetica, sans-serif;
  font-size: max(20px, 4vw) !important;
  line-height: max(24px, 5vw) !important;
  position: absolute;
  left: 0;
  padding: 0 1.75rem;
  top: 50%;
  letter-spacing: -.01em;
  transform: translateY(-50%);
  -webkit-text-stroke: 0.2px;

  @media (max-width: 768px) {
    padding: 0 1.25rem;
  }
}
.rnd-contact a {
  color: black;
  text-decoration: underline;
  text-underline-offset: max(4.2px, 0.9vw);
  text-decoration-thickness: max(2.5px, 0.5vw);
  border: none !important;
}
.rnd-contact a:hover {
  color: black !important;
}
.rnd-footer {
  font-family: Arial, Helvetica, sans-serif;
}
.rnd-menu-button svg {
  height: 18px;
  width: 37.5px;
}
.rnd-current-nav-link {
  color: #000;
}
.rnd-mobile-nav {
  font-size: 3rem;
}
.viewSpacer {
  min-height: 1px;
}
.r-d-nav-text-desktop{
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 110%;
  /* or 15px */
  display: flex;
  align-items: center;
  /* set letter-spacing accoding to Johns notes to 0; */
  letter-spacing: 0em;

  color: #000000;
}

.r-d-nav-text-mobile{
  font-style: normal;
  font-weight: normal;
  font-size: 12px;
  line-height: 120%;
  /* or 14px */
  display: flex;
  align-items: center;
  /* set letter-spacing accoding to Johns notes to 0; */
  letter-spacing: 0em;
  color: #000000;
}

.r-d-tagline{
  max-width: 100%;
}

.r-d-tagline-mobile{
  max-width: 300px;
}

.earth-rnd-logo-mobile {
  display: none;
  width: 58px;
}

.earth-rnd-logo {
  width: 700px;
}

.rnd-md-menu {
  right: 0;
  transform: rotate(-90deg);
  transform-origin: right;
  margin-right: 5px;
  margin-top: -5px;
  -webkit-text-stroke: 0.2px;
}

.hero-rnd {
  height: min(45vw, 1000px);
  margin-right: 24px;
  margin-top: 80px;

  @media (max-width: 768px) {
    height: 75vw;
    margin-top: 60px;
    margin-right: 0;
  }
}

.hero-rnd-container {
  margin: 0 -1.75rem;
  width: 100vw !important;
}

.hero-rnd-video {
  position: relative;
  width: 70%;
  max-height: 100%;
  overflow: hidden;
  filter: grayscale(1);

  @media (max-width: 550px) {
    width: 90%;
  }
}

.hero-rnd-video-thumbnail {
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  filter: grayscale(1);
  z-index: 2;
  background-color: white;
}

.hero-rnd-video-thumbnail img {
  height: 100%;
  width: 100%;
}

.r-d-menu-nav {
  margin-left: 1.75rem !important;
  margin-right: 1.75rem !important;
}

.hero-rnd-video::before {
  content: "";
  display: block;
  width: 100%;
  padding-bottom: 56.25%;
  height: 0;
}

.hero-rnd-video iframe {
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

.hero-rnd-image > img {
  max-width: 60%;
}

.hero-rnd-image figure {
  max-width: 60%;
  height: 100%;
}

.hero-rnd-image .gatsby-image-wrapper {
  height: 100%;
}

.hero-rnd-image img {
  max-height: 600px;
}

.hero-rnd-text {
  color: #ff0000;
  font-size: max(20px, 4vw);
  line-height: max(24px, 5vw);
  z-index: 11;
  margin: 0 -1.75rem;
  width: 100vw !important;
  padding: 0 1.75rem;
}

.live-video-container {
  width: 70%;
  margin: 40px auto 0 auto;

  @media (max-width: 768px) {
    width: 100%;
    margin: 20px auto 0 auto;
  }
}

.live-video {
  position: relative;
  width: 100%;
  max-height: 100%;
  overflow: hidden;
}

.live-video::before {
  content: "";
  display: block;
  width: 100%;
  padding-bottom: 56.25%;
  height: 0;
}

.live-video iframe {
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

.live-video-placeholder {
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  z-index: 2;
  background-color: white;
}

.live-video-placeholder img {
  height: 100%;
  width: 100%;
}

.lightbox-pdf{
  position: fixed;
  top:0;
  left:0;
  z-index: 900;
  background: white;
  width: 100vw;
  height:100vh;
  overflow-y: scroll;

}
.lightbox-pdf canvas{
  display: block;
  margin:0 auto;
}

.react-pdf__Page{
  max-height: calc(100vh - 60px);
}
.lightbox-pdf .left-arrow{
  position: absolute;
  left:30px;
  top:50%;
}
.lightbox-pdf .pdf-close svg {
  width:50px;
  height:50px;

}
.lightbox-pdf .pdf-close svg line{
  stroke:black;
  stroke-width:3px;
}
.lightbox-pdf .pdf-close{
  top:70px;
  right:190px;
}

.lightbox-pdf .right-arrow{
  position: absolute;
  right:30px;
  top:50%;
}

.container-no-x-scroll{
  overflow-x: hidden;
}

.rte-rnd {
  font-size: max(20px, 4vw) !important;
  line-height: max(24px, 5vw) !important;
  letter-spacing: -0.01em !important;
  -webkit-text-stroke: 0.2px;
  font-family: Arial, Helvetica, sans-serif;
}
.rte.rte-large .article-accordion{
  border:none;
  font-family: Arial, sans-serif;
  line-height: 0;
}
.rte.rte-large .article-accordion button{
  /* change padding to padding-top */
   padding: 0;
   display:inline-block;
   width:100%;
}
.rte.rte-large .article-accordion button:hover{
  background: inherit;
}
.rte.rte-large .article-accordion *{
  font-size:inherit;
  line-height:inherit;
  font-style: normal;
  font-weight: normal;
  color: #000000;
}
.rte.rte-large .article-accordion .article-box{
  width: 100%;
  padding-top: 1.35vw;
  padding-bottom: 1.35vw;
}
.rte.rte-large .article-accordion .article-pagebreak{
  border-top-color: black;
  border-top-width: 1px;
}
.rte.rte-large .article-accordion .article-titlebox{
  display: inline;
  text-align: left;
}
.rte.rte-large .article-accordion .article-title{
  font-size: max(32px, 4vw);
  line-height: max(44.8px, 5vw);
  letter-spacing: -0.33px;
  -webkit-font-smoothing: auto;
  text-decoration: underline;
  text-underline-offset: max(4.2px, 0.9vw);
}
.rte.rte-large .article-accordion .article-title:hover {
  text-decoration: none;
}
.rte.rte-large .article-accordion .article-subtitle{
  font-size: 13px;
  line-height: 110%;
}
.rte .article-accordion .flag-box{
  display:inline-flex;
}
.rte .article-accordion .flag{
  font-size: .688rem;
  line-height: 110%;
  letter-spacing: 0.03em;

  display: inline;
  white-space: nowrap;
  margin-top: -0.45rem;
  margin-bottom: 0.1rem;
}
.rte .article-accordion .flag-bg{
  font-size: 13px;
  line-height: 110%;
  letter-spacing: 0.03em;
  display:inline-flex;
  white-space: nowrap;
  margin-top: 0.45rem;
}
.article-tag{
  padding-top: max(11px, 0.9vw);
}
.rte .article-accordion .article-tag{
  font-size: max(11px, 0.9vw);
  line-height: 110%;
  letter-spacing: 0.03em;
  @apply uppercase;
  display: flex;

  min-width: 5rem;
}
.article-container {
  padding-left: 0 !important;
  padding-right: 0 !important;
}
.article-container p {
  font-size: max(16px, 1.6vw) !important;
  line-height: 110% !important;
}
.article-main-image, .article-section-image {
  position: relative;
}
.article-image-caption {
  font-size: 12px !important;
  position: absolute;
  bottom: 0;
  left: 0;
  transform: rotate(90deg);
  transform-origin: left bottom;
}
.article-main-image .article-image-caption {
  @media (max-width: 768px) {
    transform: none;
    bottom: unset;
    top: 100%;
  }
}
.article-image-stream {
  margin-top: 96px;
}
.popup-button {
  text-decoration: underline;
  text-underline-offset: max(4.2px, 0.9vw);
  text-decoration-thickness: max(2.5px, 0.5vw);
}
.gallery-image iframe, .internal-iframe iframe{
  max-width:100%;
}
.standard-text a {
  border-bottom: 2px solid;
}
.standard-text h1 > a {
  border-bottom:5px solid;
}
@media(min-width:768px){
  .px-special{
    padding:0 85px;
  }
}
@media(max-width:767px){
  .article-container {
    margin-left: 72px;
  }

  .article-accordion {
    margin-right: 24px;
  }

  .mobile-padding {
    padding: 0 1rem;
  }

  .earth-rnd-logo {
    display: none;
  }

  .earth-rnd-logo-mobile {
    display: block;
  }

  .hero-rnd-image figure {
    max-width: 80%;
  }

  .r-d-menu {
    padding: 1.25rem 0;
  }

  .r-d-menu-nav {
    height: 100%;
    margin-left: 1rem !important;
    margin-right: 1rem !important;
  }

  .rnd-mobile-menu {
    height: 100vh;
  }

  .rnd-contact {
    font-size: 6vw;
  }

  .react-pdf__Page,.react-pdf__Page canvas{
    max-width: calc(100vw);
  }
  .mt-special-nav{
    margin-top: 27px !important;
  }

  .standard-text h1 > a {
    border-bottom:2px solid;
  }
  .lightbox-pdf canvas{
    transform-origin:center center;
    transform:scale(0.7);
  }
  .lightbox-pdf .pdf-close {
    right:50px;
  }
  .lightbox-pdf .pdf-close svg{
    width:15px;
    height:15px;
  }
   .lightbox-pdf .pdf-close svg line{
    stroke-width:10px;
   }
}

.rte .html-text{
  font-size:18px;
  line-height: 1;
}

/* rdObroud Button */
@media(min-width: 768px){
  .rdObround-width h2, .rte.rte-large .rdObround-width h2{
    font-size: 0.875rem !important;
    letter-spacing: 0;
  }
}
.rdObround-width h2, .rte.rte-large .rdObround-width h2 {
  font-size:0.875rem ;
}
.rdObround-width .background-obround {
  background: rgba(255, 255, 255, 1);
  box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.5);
  border-radius: 9999px;
  transition: 0.25s box-shadow;
  transition-property: box-shadow, background-color;
}
/* info section R & D */
.info-rnd-content{
  font-size: 0.75rem !important;
}
.info-rd a{
  margin-bottom: 1.5rem;
  text-decoration: underline;
}
.rnd-mailchimp input {
  font-size: .875rem !important;
  padding: 1.5em 0.5em !important;
  display: flex !important;
}
.input-margin-top {
  margin-top: 1rem !important;
}
form button[type="submit"], form input {
  height: 52px !important;
  font-size: 1rem !important;
  border-radius: 0 !important;
  box-shadow: none !important;
  border: 1px solid black !important;
}
.rnd-mailchimp form button,.rnd-mailchimp button[type="submit"]{
  display: flex;
  line-height: 1.125rem !important;
}
.rnd-mailchimp form p{
  display:none;
  padding: 1.5em 0.5em !important;
}
img{
  max-width: 500px;
}
.info-section{
  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.6);
  animation:slide;
  animation-iteration-count: 1;
  animation-duration:0.2s;
}
@keyframes slide {
  from { transform: translateY(-500px); }
  to { transform: translateY(0); }
}
/* end R & D*/

